# quackinter

./: .gitignore  README.md  pyproject.toml
plans/: .excalidraw  commands.excalidraw
quackinter/: __init__.py  config.py  context.py  environment.py  errors.py  interpreter.py  key_injector.py  line.py  quackinter.py  sanitizer.py  stack.py  stack_context.py  stack_trace.py  utils.py
quackinter/commands/: __init__.py  altchar.py  altstring.py  command.py  default_delay.py  default_string_delay.py  delay.py  general_key.py  gui.py  hold_release.py  media.py  menu.py  modifier_key.py  println.py  rem.py  repeat.py  string.py  string_delay.py  stringln.py  sysrq.py  wait_for_button_press.py
tests/: __init__.py  custom_test.py  environment_test.py  interpreter_test.py  stack_context_test.py  utils_test.py
tests/commands/: altstring_test.py  general_key_test.py
tests/testing_tools/: __init__.py  make_command.py  testing_commands.py
