[tool.poetry]
name = "quackinter"
version = "0.1.0"
description = ""
authors = ["Dragon of Shuu <68718280+DragonOfShuu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
poethepoet = "^0.29.0"
ruff = "^0.6.9"
pytest = "^8.3.3"

[tool.poe.tasks]
format = "black ."
lint = "ruff check"
polish = ["format", "lint"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N", "ANN0", "Q002"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
